--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,8 @@
 .header-container{
     width:100%;
-    height:716px;
+    /* height:716px; */
     background:url('./Assets/background-img.png');
+    
     color:white;
 }
 
@@ -11,6 +12,13 @@
     padding:20px 60px;
 }
 
+@media screen and (max-width : 1350px){
+    .header-content{
+        display: flex;
+        flex-direction: column;
+        gap:40px;
+    }
+}
 .left-content{
     width:50%;
 }
