--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,7 @@
 .header-container{
-    width:100%;
+    max-width:100%;
     /* height:716px; */
     background:url('./Assets/background-img.png');
-    
     color:white;
 }
 
@@ -40,12 +39,13 @@
 
 #img-1{
     margin-top: 15px;
-    width:551px;
-    height:587.07px;
+    max-width: 100%;
+    /* width:551px;
+    height:587.07px; */
 }
 #img-2{
-    width:330px;
-    height:65px;
+    /* width:330px;
+    height:65px; */
 }
 .right-content{
     display: flex;
