--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -1,5 +1,5 @@
 .nav-container{
-    width: 100%;
+    max-width: 100%;
     height:85.5px;
     background: linear-gradient(to right, rgba(56, 239, 125, 25%), rgba(17, 153, 142, 25%));
     display: flex;
@@ -9,6 +9,7 @@
 .nav-content{
     display: flex;
     align-items: center;
+    /* justify-content: space-between; */
     gap:250px;
     margin:auto 20px;
 }
@@ -45,3 +46,8 @@
     color:white
 }
 
+@media screen and (max-width:1350px){
+    .nav-links{
+        display: none;
+    }
+}
