--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -1,6 +1,7 @@
 .container{
-    width:1242.33px;
-    height:240px;
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
     margin: 100px auto;
     
 }
@@ -22,4 +23,21 @@
 .company-logo{
     display: flex;
     gap:100px;
+}
+
+@media screen and (max-width : 1350px){
+
+    .content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .company-logo{
+        display: flex;
+        flex-direction: column;
+        gap:40px;
+        align-items: center;
+        justify-content: center;
+    }
 }
