--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,8 +27,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width:384px;
-    height:114px;
+    max-width: 100%;
+    /* width:384px;
+    height:114px; */
     background-color: white;
     border-radius: 20px;
     margin-left: 30px;
