--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -30,7 +30,6 @@
     .content{
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
     }
     .company-logo{
@@ -39,5 +38,10 @@
         gap:40px;
         align-items: center;
         justify-content: center;
+    }
+
+    .title{
+        font-size: 21px;
+        font-weight: 600;
     }
 }
