--- a/src/components/Testinomial/Testinomial.css
+++ b/src/components/Testinomial/Testinomial.css
@@ -9,22 +9,7 @@
     gap:70px;
 }
 
-@media screen and (max-width : 1350px){
-    .test-content{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap:80px;
-    }
 
-    /* .test-left-content{
-        display: flex;
-        flex-direction: column; */
-        /* justify-content: center;
-        align-items: center; */
-    /* } */
-}
 .test-left-content{
     display: flex;
     flex-direction: column;
@@ -152,4 +137,35 @@
     height:54px;
     background: linear-gradient(to right, rgba(17, 153, 142, 1), rgba(56, 239, 125, 1));
     color: transparent; 
+}
+
+@media screen and (max-width : 1350px){
+    .test-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap:80px;
+    }
+
+    .test-left-content-1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .test-heading{
+        width:30%;
+        font-size: 24px;
+        font-weight: 600;
+    }
+
+    .test-heading-desc{
+        width:30%;
+        font-size: 15px;
+        font-weight: 400;
+        color:#4F7396;
+    }
+
 }
