--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,20 @@
 .header-container{
     max-width:100%;
-    /* height:716px; */
     background:url('./Assets/background-img.png');
     color:white;
+    background-size: cover;
 }
 
 .header-content{
+    width:90%;
     display: flex;
     align-items: center;
     padding:20px 60px;
+    gap:80px;
+    margin:0 auto;
 }
 
-@media screen and (max-width : 1350px){
-    .header-content{
-        display: flex;
-        flex-direction: column;
-        gap:40px;
-    }
-}
+
 .left-content{
     width:50%;
 }
@@ -28,8 +25,8 @@
     align-items: center;
     justify-content: center;
     max-width: 100%;
-    /* width:384px;
-    height:114px; */
+    width:384px;
+    height:114px;
     background-color: white;
     border-radius: 20px;
     margin-left: 30px;
@@ -52,7 +49,7 @@
     display: flex;
     flex-direction: column;
     gap:10px;
-    width:40%;
+    width:50%;
 }
 
 .welcome{
@@ -119,4 +116,20 @@
     align-items: center;
     justify-content: center;
     gap:10px;
+}
+
+@media screen and (max-width : 1250px){
+
+    .header-container{
+        max-width:200%;
+        background:url('./Assets/background-img.png');
+        background-size: cover;
+        color:white;
+    }
+    .header-content{
+        max-width: 80%;
+        display: flex;
+        flex-direction: column;
+        gap:40px;
+    }
 }
