--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -1,17 +1,18 @@
 .nav-container{
+    display: flex;
+    justify-content: center;
     max-width: 100%;
     height:85.5px;
     background: linear-gradient(to right, rgba(56, 239, 125, 25%), rgba(17, 153, 142, 25%));
-    display: flex;
-    align-items: center;
+    
 }
 
 .nav-content{
+    width: 90%;
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: center;
     gap:250px;
-    margin:auto 20px;
 }
 .logo img{
     width:117px;
@@ -46,7 +47,11 @@
     color:white
 }
 
-@media screen and (max-width:1350px){
+@media screen and (max-width:1150px){
+
+    .nav-container{
+        background-size: cover;
+    }
     .nav-links{
         display: none;
     }
