--- a/src/components/Testinomial/Testinomial.css
+++ b/src/components/Testinomial/Testinomial.css
@@ -1,10 +1,11 @@
 .test-container{
-   max-width: 100%;
+   width: 100%;
    display: flex;
    justify-content: center;
 }
 
 .test-content{
+    margin:auto 60px;
     display: flex;
     gap:70px;
 }
@@ -14,8 +15,8 @@
     display: flex;
     flex-direction: column;
     gap:27px;
-    width:572px;
-    height:517.94px;
+    /* width:572px;
+    height:517.94px; */
 }
 
 .test-left-content-1{
@@ -23,16 +24,16 @@
     flex-direction: column;
     /* background-color: aquamarine; */
     gap:21px;
-    width:572px;
-    height:277.94px;
+    /* width:572px;
+    height:277.94px; */
 }
 
 .test-left-content-2{
     display: flex;
     flex-direction: column;
     /* background-color: blue ; */
-    width:507px;
-    height:313px;
+    /* width:507px;
+    height:313px; */
 }
 .about-us{
     display: flex;
@@ -71,8 +72,8 @@
 }
 
 #exp{
-    width:135px;
-    height:112px;
+    /* width:135px;
+    height:112px; */
     font-size: 108px;
     font-weight: 600;
     background: linear-gradient(to right, rgba(17, 153, 142, 1), rgba(56, 236, 125, 1));
@@ -139,16 +140,15 @@
     color: transparent; 
 }
 
-@media screen and (max-width : 1350px){
+@media screen and (max-width : 1050px){
     .test-content{
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap:80px;
+        gap:20px;
     }
 
     .test-left-content-1{
+        width: 50%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -156,16 +156,41 @@
     }
 
     .test-heading{
-        width:30%;
+        max-width:80%;
         font-size: 24px;
         font-weight: 600;
+        
     }
 
     .test-heading-desc{
-        width:30%;
+        max-width:80%;
         font-size: 15px;
         font-weight: 400;
         color:#4F7396;
     }
 
+    .test-features{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap:40px;
+    }
+
+    .test-right-content{
+        display: flex;
+        justify-content: center;
+        /* align-items: center; */
+        
+    }
+    
+    .test-right-content img{
+        width:60%;
+        /* height:60%; */
+    }
+    .test-btn-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
