--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,11 @@
 
 .footer-container{
     width:100%;
-    height:280px;
     background-color: #00425A;
     color:white;
     padding-top: 30px;
     margin-top: 50px;
+    padding:20px;
 }
 
 .footer-content{
@@ -59,4 +59,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media screen and (max-width : 1350px){
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap:20px;
+        padding: 20px auto;
+    }
 }
